alignment issues fixed

--- a/pages/style.css
+++ b/pages/style.css
@@ -37,7 +37,6 @@ ul {
 }
 
 .listItem {
-    margin-left: 2em;
     margin-right: 2em;
     font-size: 1.5em;
     font-weight: bold;
